--- a/css/index.css
+++ b/css/index.css
@@ -22,3 +22,10 @@ ul{
   justify-content: center;
   align-items: center;
 }
+
+.contact {
+  color: rgb(75, 5, 238);
+  font-family: sans-serif;
+  font-size: 100px;
+  text-align: center;
+}
