--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(112, 107, 107);
+  background-color: rgb(189, 185, 185);
 }
 
 h1{
@@ -13,8 +13,11 @@ ul{
   display: flex;
   list-style: none;
   justify-content: space-between;
-}
 
+}
+a {
+  text-decoration: none;
+}
 .footer{
   position: absolute;
   width: 100%; 
