--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body{
-  background-color: rgb(189, 185, 185);
+  background-color: rgb(218, 211, 211);
 }
 
 h1{
@@ -7,12 +12,15 @@ h1{
   font-size: 50px;
   text-align: center;
   font-family: sans-serif;
+  margin: 10px 0;
+
 }
 
 ul{
   display: flex;
   list-style: none;
   justify-content: space-between;
+  padding: 20px 50px;
 
 }
 a {
@@ -20,7 +28,8 @@ a {
 }
 .footer{
   position: absolute;
-  width: 100%; 
+  left: 0;
+  right: 0;
   bottom: 0;
   height: 50px;
   background-color: red;
