--- a/css/index.css
+++ b/css/index.css
@@ -57,4 +57,8 @@ a {
   border-radius: 10px;
   background-color: blueviolet;
   margin: 50px;
+  font-size: 1.4rem;
+  font-family: sans-serif;
+  color: white;
+  text-align: center;
 }
